Added Meta tags for better reach

--- a/index.html
+++ b/index.html
@@ -2,9 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+	<meta name="author" content="Harsh Ved" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harsh Ved | Developer</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <meta
+      name="description"
+      content="Harsh Ved is a Full Stack Developer and System Architect based in Ontario. Specializing in secure web applications, Python data logic, and React development."
+    />
+    <meta
+      name="keywords"
+      content="Harsh Ved, Software Developer, Full Stack, Web Developer, Portfolio, React, Python, Freelance, Ontario, System Architect, Canada, Indian, India, Software"
+    />
+    
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://harshved.github.io/portfolio/" />
+    <meta property="og:title" content="Harsh Ved | Full Stack Developer | Information Security Analyst | Cloud Architect" />
+    <meta
+      property="og:description"
+      content="Enter the system. View my projects in Full Stack Development, Data Security, and Python Automation."
+    />
+
+    <meta
+      property="og:image"
+      content="https://harshved.github.io/portfolio/favicon.ico"
+    />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Harsh Ved | Full Stack Developer | Information Security Analyst | Cloud Architect" />
+    <meta
+      name="twitter:description"
+      content="Full Stack Developer available for hire. Specializing in secure systems and data logic."
+    />
+    <meta
+      name="twitter:image"
+      content="https://harshved.github.io/portfolio/favicon.ico"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -15,6 +50,7 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <!-- Google tag (gtag.js) -->
   <script
     async
